--- a/packages/json-main/package.json
+++ b/packages/json-main/package.json
@@ -28,7 +28,9 @@
         "jsonpath": "^1.1.1"
     },
     "devDependencies": {
-        "@geislabs/geis-core": "^0.0.45",
-        "@geislabs/geis-type": "^0.0.45"
+        "@geislabs/protocol": "^0.0.48",
+        "@geislabs/fetch": "^0.0.55",
+        "@geislabs/json-type": "^0.0.45",
+        "@geislabs/json-fetch": "^0.0.45"
     }
 }
