--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
         "release:patch": "git add -A && git commit -am \"released\" --allow-empty && lerna version patch --yes --force-publish",
         "test:coverage": "jest --collect-coverage",
         "test": "jest",
-        "test:unit": "jest --testPathIgnorePatterns packages/geis-e2e",
-        "test:e2e": "jest \"packages/geis-e2e\"",
+        "test:unit": "jest --testPathIgnorePatterns packages/json-e2e",
+        "test:e2e": "jest \"packages/json-e2e\"",
         "watch": "jest --watch",
         "watch:e2e": "jest \"packages/json-e2e\" --watch",
         "watch:protocol": "jest \"packages/json-protocol\" --watch",
