--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "build": "lerna run build --stream",
         "start": "lerna run start --stream",
         "release:patch": "git add -A && git commit -am \"released\" --allow-empty && lerna version patch --yes --force-publish",
-        "docs": "rimraf docs && typedoc --readme README.md --disableSources --out docs packages/json-main/lib/index.ts",
+        "docs": "rimraf docs && typedoc --readme none --disableSources --out docs packages/json-main/lib/index.ts",
         "test:coverage": "jest --collect-coverage",
         "test": "jest",
         "test:unit": "jest --testPathIgnorePatterns packages/json-e2e",
