--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
         "build": "lerna run build --stream",
         "start": "lerna run start --stream",
         "release:patch": "git add -A && git commit -am \"released\" --allow-empty && lerna version patch --yes --force-publish",
-        "docs": "rimraf docs && typedoc --readme none --disableSources --out docs packages/json-main/lib/index.ts",
+        "docs": "npm run docs:prepare && npm run docs:generate && npm run docs:concat && npm run docs:cleanup",
+        "docs:prepare": "rm -rf docs -r && rm -rf tmp && mkdir docs",
+        "docs:generate": "typedoc --readme none --disableSources --out tmp packages/json-main/lib/index.ts",
+        "docs:concat": "concat-md --file-name-as-title --dir-name-as-title --debug tmp > docs/README.md",
+        "docs:cleanup": "rm -rf tmp",
         "test:coverage": "jest --collect-coverage",
         "test": "jest",
         "test:unit": "jest --testPathIgnorePatterns packages/json-e2e",
@@ -27,6 +31,7 @@
         "@types/jsonpath": "^0.2.0",
         "@types/rimraf": "^3.0.0",
         "autobind-decorator": "^2.4.0",
+        "concat-md": "^0.3.5",
         "eslint": "^7.27.0",
         "file-url": "^4.0.0",
         "husky": "^6.0.0",
